fixed spacing on weather summary

--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -152,7 +152,7 @@ table {
 }
 
 p {
-    padding: 15px;
+    /*padding: 15px;*/
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 17px;
     color: #1f2421;
@@ -187,7 +187,7 @@ p {
     top: 20px;
     padding: 10px;
     max-width: 300px;
-    line-height: .5px;
+    /*line-height: .5px;*/
 }
 
 .pancakebanner {
